# libs

./: .gitignore  README.md
.github/workflows/: wangamail-csharp.yml  wangamail-rs.yml  wangapayfast-csharp.yml  wangapayfast-rs.yml
wangamail-csharp/: GraphMailClient.cs  GraphMailClientBuilder.cs  GraphModels.cs  README.md  TokenProvider.cs  WangaMail.CSharp.csproj  WangaMailException.cs
wangamail-csharp/tests/WangaMail.CSharp.Tests/: GraphModelsTests.cs  WangaMail.CSharp.Tests.csproj
wangamail-py/: README.md  package.json  pyproject.toml
wangamail-py/tests/: test_models.py
wangamail-py/wangamail_py/: __init__.py  __main__.py  client.py  errors.py  models.py
wangamail-rs/: Cargo.toml  README.md  rustfmt.toml
wangamail-rs/examples/: mcp_server.rs
wangamail-rs/src/: auth.rs  client.rs  error.rs  graph.rs  lib.rs  mcp.rs
wangamail-rs/tests/: send_mail_integration.rs
wangapayfast-csharp/: ItnNotification.cs  PayFastClient.cs  PayFastClientBuilder.cs  PayFastHttpHelpers.cs  PayFastModels.cs  README.md  WangaPayFast.CSharp.csproj  WangaPayFastException.cs
wangapayfast-csharp/tests/WangaPayFast.CSharp.Tests/: PayFastClientTests.cs  WangaPayFast.CSharp.Tests.csproj
wangapayfast-rs/: Cargo.toml  README.md
wangapayfast-rs/src/: api.rs  error.rs  graphql.rs  itn.rs  lib.rs  onsite.rs  payments.rs  rest.rs
wangapayfast-rs/tests/: api_signature.rs  itn_signature.rs
