[package]
name = "wangamail-rs"
version = "0.1.0" 
edition = "2021"
description = "Send email via Microsoft Graph API using app registration (client credentials)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/wangalibs"
keywords = ["wanga", "wangamail", "microsoft", "graph", "email", "outlook", "oauth2", "mcp"]
categories = ["email", "web-programming::http-client"]
authors = ["Your Name <you@example.com>"]

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
urlencoding = "2.1"

# Optional MCP server (for AI tools to send email via Model Context Protocol)
rmcp = { version = "1.1", optional = true, default-features = false, features = ["server", "transport-io", "schemars"] }
schemars = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["io-std", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
