[package]
name = "wangapayfast-rs"
version = "0.1.2"
edition = "2021"
description = "PayFast ITN (Instant Transaction Notification) verification helpers for Rust services"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1ngaOS/libs/tree/main/wangapayfast-rs"
keywords = ["payfast", "payments", "itn", "webhook", "signature"]
categories = ["web-programming::http-server", "cryptography::cryptocurrencies"]
authors = ["Your Name <you@example.com>"]

[dependencies]
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
thiserror = "2.0"
url = "2.5"

[features]
default = []
http = ["dep:reqwest"]
rest-api = ["http", "dep:tokio", "dep:axum", "dep:serde_json"]
graphql-api = ["rest-api", "dep:async-graphql", "dep:async-graphql-axum"]
full = ["http", "rest-api", "graphql-api"]

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
optional = true
features = ["macros", "rt-multi-thread"]

[dependencies.axum]
version = "0.7"
optional = true
features = ["macros", "json"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.async-graphql]
version = "7.2"
optional = true

[dependencies.async-graphql-axum]
version = "7.2"
optional = true

[dev-dependencies]
once_cell = "1.19"
urlencoding = "2.1"

